<resources>
    <string name="app_name" translatable="false">SEP4-Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account_sign_in_first">No account? Sign in first!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="garden_name">Graden Name</string>
    <string name="garden_land_area">Land Area</string>
    <string name="garden_city">City</string>
    <string name="garden_street">Street</string>
    <string name="garden_street_number">Street Number</string>
</resources>